--- a/src/app/app.grocery.html
+++ b/src/app/app.grocery.html
@@ -2,7 +2,8 @@
     <br>
     <div style="text-align:center" >
     <h2 style="color: rgb(0, 42, 255);"> Grocery List Manager </h2>
-    </div>
+    <fa-icon [icon]="faShoppingBasket" style="color: rgb(0, 42, 255);"></fa-icon>
+</div>
     <br/>
     
     <div class="container">
@@ -14,7 +15,7 @@
                     <button class="btn btn-primary" type="button"  (click)="onClick()">
                     <fa-icon [icon]="faCheckSquare"></fa-icon>
                     </button>
-        
+                
             </div>
         </div>
     </div>
